# Threat-Log-Analyzer

./: README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: auth.log.sample
rules/: default.yaml
src/threat_log_analyzer/: cli.py  parsers.py  report.py  rules.py
src/threat_log_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/threat_log_analyzer/rules/: default.yaml
tests/: test_parsers.py  test_report.py  test_rules.py
